# Piggybank

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/.sqlx/: query-2bb2194272219483e2eb111534305880dfc0c21a505edcc04598b10ba33d1635.json  query-32facf3bf257dfe2a701826f480e26a72f380e7c7e446d7b6b5f9e0a3c8fdb70.json  query-6c6a5cd55ff20950fbbeac83519b3d864d2e07dcc8faef2ce6d0aa905741fd67.json  query-71eb65127caaf7fab1244d4011ec9c28ea72618517ea944aacafdecc6a659b59.json  query-9c29573bc2e387b64602a8189a4773b0682b1572d65e84966dfb29b80c0bd579.json  query-9dd98720fd974c369cc063637ab6ba840c876027ab563cb170612c1ee4c1a415.json  query-af643b4cc2337eae002859f66a973ed12307fe86a095ff670024abbcde38923c.json
backend/migrations/: 20260119_000001_create_transactions.sql
backend/src/: lib.rs  main.rs
frontend/piggybankfront/: index.html  package-lock.json  package.json
frontend/piggybankfront/src/: App.vue  main.js
frontend/piggybankfront/src/assets/css/: login.css
frontend/piggybankfront/src/router/: index.js
frontend/piggybankfront/src/views/: Dashboard.vue  Home.vue  Login.vue
src/: main.rs
