[package]
name = "piggy_bank"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
axum = "0.8.8"
serde = {version="1.0.228",features=["derive"]}
tokio = {version="1.48.0",features=["full"]}
tower-http = {version="0.6.8",features=["cors","fs"]}
http = "1.4.0"
webbrowser = "1.0.6"
